@@ -87,6 +87,10 @@ On Linux, try to find the process MPI rank (by querying some widespread
 environment variables) and display it at the end of the line.
 
 .TP
+\fB\-\-lstopo\-misc\fR <file>
+Output a file that may be given to \fBlstopo \-\-misc\-from\fR for displaying
+processes/threads as Misc objects. See EXAMPLES below.
+.TP
 \fB\-\-json\-server\fR
 Run the tool as a JSON server that waits for other process' requests
 on a port and sends back binding information.
@@ -174,6 +178,27 @@ it only appears in the thread-aware output (or if explicitly selected):
 
     $ hwloc-ps --pid 4759
     4759	Machine:0		myprogram
+
+The output may be a file that lstopo uses for adding Misc objects
+(more flexible version of lstopo --top):
+
+    $ hwloc-ps --misc-from foo
+    $ cat foo
+    name=12444 myprogram
+    cpuset=0x000000f0
+    subtype=Process
+
+    name=12444 mythread1
+    cpuset=0x00000050
+    subtype=Thread
+
+    name=12444 mythread2
+    cpuset=0x000000a0
+    subtype=Thread
+
+This may be directly given to lstopo:
+
+    $ hwloc-ps --misc-from - | lstopo --misc-from -
 
 On Linux, hwloc-ps may also display some process specific environment
 variable at the end of the line. This is for instance useful
