@@ -317,6 +317,7 @@ machine are shown.  On Linux, kernel threads are not shown.
 If many processes appear, the output may become hard to read anyway,
 making the hwloc-ps program more practical.
 
+See \fB\-\-misc\-from\fR for a customizable variant using \fBhwloc-ps\fR.
 .TP
 \fB\-\-misc\-from\fR <file>
 Add Misc objects as described in <file> containing entries such as:
@@ -328,6 +329,8 @@ Add Misc objects as described in <file> containing entries such as:
     cpuset=0x7
     subtype=myOptionalSubtype
 
+This is useful for combining with \fBhwloc-ps --lstopo-misc\fR (see EXAMPLES below)
+because hwloc-ps is far more customizable than lstopo's \fB\-\-top\fR option.
 .TP
 \fB\-\-children\-order\fR <order>
 Change the order of the different kinds of children with respect to
@@ -877,6 +880,11 @@ To count the number of logical processors in the system
 To append the kernel release and version to the graphical legend:
 
    lstopo --append-legend "Kernel release: $(uname -r)" --append-legend "Kernel version: $(uname -v)"
+
+To show where a process and its children are bound by combining with hwloc-ps:
+
+   hwloc-ps --pid-children 23 --lstopo-misc - | lstopo --misc-from -
+
 .
 .\" **************************
 .\"    Notes Section
